--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    </div>
 
    <div id="items">
-    <img src="/assets/items/bag.png" alt="">
+    <img src="/assets/items/bag.png" alt="" id="js-bag-button">
     <img src="/assets/items/info.png" alt="">
    </div>
    
@@ -37,6 +37,45 @@
       <div class="avatar"><img src="/assets/warrior/punch.png" alt=""></div>
       <div class="title"><p>space</p></div>
     </div>
+
+    <div class="bag" id="js-bag">
+      <div class="bag-left">
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+      </div>
+      <div class="bag-right">
+        <div class="name-item"><h3>Ánh sáng của ban nhạc</h3></div>
+        <div class="top-info">
+          <div class="top-info-left">
+            <div class="top-info-left-top"><p>Hoa sự sống</p></div>
+            <div class="top-info-left-bottom">
+              <p class="string">Tấn công</p>
+              <p class="num">1000</p>
+            </div>
+          </div>
+          <div class="top-info-right">
+            <img src="/assets/equipments/flower.png" alt="">
+          </div>
+        </div>
+      </div>
+      <img class="bag-close-button" src="/assets/equipments/close-button.png" alt="" id="js-bag-close-btn">
+    </div>
+
+    <script type="module" src="event/bag.js"></script>
 </body>
 
 </html>
