--- a/index.html
+++ b/index.html
@@ -38,33 +38,19 @@
       <div class="title"><p>space</p></div>
     </div>
 
-    <div class="bag" id="js-bag">
-      <div class="bag-left">
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
-        <div class="item"><img src="assets/equipments/Amosbow.png" alt=""></div>
+    <div class="bag" id="js-bag"><div>
+      <p></p>
+    </div>
+      <div class="bag-left" id="js-bag-left">
       </div>
-      <div class="bag-right">
-        <div class="name-item"><h3>Ánh sáng của ban nhạc</h3></div>
+      <div class="bag-right" id="js-bag-right">
+        <div class="name-item"><h3 id="js-equipment-groupname"></h3></div>
         <div class="top-info">
           <div class="top-info-left">
-            <div class="top-info-left-top"><p>Hoa sự sống</p></div>
+            <div class="top-info-left-top"><p id="js-equipment-name"></p></div>
             <div class="top-info-left-bottom">
-              <p class="string">Tấn công</p>
-              <p class="num">1000</p>
+              <p class="string" id="js-equipment-main-property"></p>
+              <p class="num" id="js-equipment-main-value"></p>
             </div>
           </div>
           <div class="top-info-right">
@@ -74,7 +60,6 @@
       </div>
       <img class="bag-close-button" src="/assets/equipments/close-button.png" alt="" id="js-bag-close-btn">
     </div>
-
     <script type="module" src="event/bag.js"></script>
 </body>
 
