add more equipment, build function addequipment after destroy monster and build equipment notification

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
       <div class="title"><p>space</p></div>
     </div>
 
-    <div class="bag" id="js-bag"><div>
-      <p></p>
-    </div>
+    <div class="bag" id="js-bag">
       <div class="bag-left" id="js-bag-left">
       </div>
       <div class="bag-right" id="js-bag-right">
@@ -53,14 +51,22 @@
               <p class="num" id="js-equipment-main-value"></p>
             </div>
           </div>
-          <div class="top-info-right">
+          <div class="top-info-right" id="js-detail-item-img">
             <img src="/assets/equipments/flower.png" alt="">
           </div>
         </div>
       </div>
       <img class="bag-close-button" src="/assets/equipments/close-button.png" alt="" id="js-bag-close-btn">
     </div>
+
+    <div class="notification" id="js-equipment-notification">
+      <!-- <div id="notification-item" class="notification-item show">
+        Đã nhận được trang bị: <span class="notification-item-equipname">Bí Điển Obsidian</span>
+      </div> -->
+    </div>
     <script type="module" src="event/bag.js"></script>
+
+
 </body>
 
 </html>
