build story for game and add npc

--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
         Đã nhận được trang bị: <span class="notification-item-equipname">Bí Điển Obsidian</span>
       </div> -->
     </div>
+
+    <div class="story hide" id="js-story">
+      <span class="story-owner" id="js-story-owner">nana</span>
+      <p class="story-content" id="js-story-content">Xin chào bạn, tôi là nana</p>
+      <button id="js-story-btn"><img src="assets/story/story_btn.png" alt="" ></button>
+    </div>
+
+    <!-- <div class="communicated-notification">
+      <p>Joan</p> <div>F</div>
+    </div> -->
+
     <script type="module" src="event/bag.js"></script>
 
 
