build login and register

--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
         <input type="text" name="" id="email" placeholder="email">
         <input type="password" name="" id="password" placeholder="password">
         <button id="submit">Đăng nhập</button>
-        <div class="navigation">Bạn chưa có tài khoản ? <a href="">Đăng ký</a></div>
+        <div class="navigation">Bạn chưa có tài khoản ? <a href="/signup.html">Đăng ký</a></div>
     </form>
 </body>
 <script type="module" src="./event/login.js"></script>
