build show equiment info

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
           <img src="/assets/equipments/flower.png" alt="">
         </div>
       </div>
+      <div class="bottom-info" id="js-bottom-info">
+        <p>Không có trang bị để hiển thị</p>
+        
+      </div>
     </div>
     <img class="bag-close-button" src="/assets/equipments/close-button.png" alt="" id="js-bag-close-btn">
   </div>
