add feature successfull

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   <script type="module" src="event/bag.js"></script>
   <script type="module" src="/event/user.js"></script>
-  <script type="module" src="/modules/socket.js"></script>
+  <!-- <script type="module" src="/modules/socket.js"></script> -->
   <script type="module" src="/main.js"></script>
 
 </body>
