build shopping and buy equipment

--- a/index.html
+++ b/index.html
@@ -85,20 +85,27 @@
     <div class="shop-properties">
       <div class="shop-properties-mora">
         <img class="shop-properties-mora-img" src="/assets/items/mora.png" alt="">
-        <p class="shop-properties-mora-info">3000</p>
+        <p class="shop-properties-mora-info" id="js-mora">3000</p>
       </div>
     </div>
     <div class="shop-items">
-      <div class="shop-items-left">
-        <div class="shop-items-left-item">
+      <div class="shop-items-left" id="js-shop-panel-left">
+        <!-- <div class="shop-items-left-item">
           <img src="/assets/equipments/Weapon_A_Thousand_Floating_Dreams.webp" alt="">
-        </div>
-        <div class="shop-items-left-item">
+        </div> -->
+      </div>
+      <div class="shop-items-right" id="js-shop-panel-right">
+        <!-- <div class="shop-items-right-name">Tên trang bị</div>
+        <div class="shop-items-right-info">
           <img src="/assets/equipments/Weapon_A_Thousand_Floating_Dreams.webp" alt="">
+          <div class="shop-items-right-info-detail">
+            <p>atk: 3000</p>
+            <p>hp: 700</p>
+          </div>
         </div>
-        <div class="shop-items-left-item">
-          <img src="/assets/equipments/Weapon_A_Thousand_Floating_Dreams.webp" alt="">
-        </div>
+        <div class="shop-items-right-buy">
+          <button>Mua</button>
+        </div> -->
       </div>
     </div>
     <img class="bag-close-button" src="/assets/equipments/close-button.png" alt="" id="js-shop-close-btn">
